# Agents

./: .gitignore
01_MergeAgents/src/agent/: graph.py
02_SoftwareAgents/: .gitignore  langgraph.json  pyproject.toml
02_SoftwareAgents/src/agent/: graph.py  prompts.py
02_SoftwareAgents/static/: ARCHITECTURE.md  CODE.md  DOCKER.md  REVIEW.md  TASK.md  TECHNOLOGY.md  file.md
03_RAG/: .gitignore  langgraph.json  pyproject.toml
03_RAG/src/: config.py  helpers.py  main.py  prompts.py  rag.example.py  rag.py  states.py
03_RAG/src/nodes/: basic.py  docker.py  implementation.py  linter.py  review.py
99_WorkingExample/ai_and_auth/code/: README.md
99_WorkingExample/ai_and_db/markdown/: TASK.md
99_WorkingExample/auth_jwt_hash/01/: data.txt  snapshot.txt  temp.txt
99_WorkingExample/auth_jwt_hash/02/: data.txt  snapshot.txt
99_WorkingExample/auth_jwt_hash/03/: data.txt  snapshot.txt
99_WorkingExample/auth_jwt_hash/04/: data.txt  snapshot.txt  temp.txt
99_WorkingExample/auth_simple_db/code/: README.md
99_WorkingExample/bad_impl/2nd_iter/: app.py
99_WorkingExample/connect_backend_to_frontend/markdown/: ARCHITECTURE.md  CODE.md  TASK.md  TECHNOLOGY.md
99_WorkingExample/database/markdown/: ARCHITECTURE.md  REVIEW.md
99_WorkingExample/image_with_ai/markdown/: CODE.md  TECHNOLOGY.md
99_WorkingExample/penguin_app_made_with_hate/: data.txt  snapshot.txt  temp.txt
99_WorkingExample/penguin_app_made_with_hate/code/: README.md
99_WorkingExample/penguin_app_made_with_hate/markdown/: ARCHITECTURE.md  CODE.md  TASK.md  TECHNOLOGY.md
(+74 files in other folders)
