[project]
name = "03-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "bs4>=0.0.2",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.1",
    "langchain[openai]>=1.2.13",
    "langgraph>=1.1.3",
]
